fix header overflow on dev pages

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -11,7 +11,7 @@ body {
   height: 100%;
   margin: 0px;
   padding: 0px;
-  overflow-x: hidden;
+  // overflow-x: hidden;
   font-family: "Montserrat", sans-serif;
   &:before {
     content: "";
